# iterated_prefill_crawler

./: .gitignore  LICENSE  PROMPT_STRATEGIES.md  README.md  create_funnel_diagram.py  pyproject.toml  test_async_extract.py  test_baseline_parsing.py  test_crawler.json  test_extract_format_reasoning.py  test_extractor.py  test_prefill.py  test_script.py  test_semaphore.py
configs/: config.yaml  config_tulu.yaml  debug.yaml  directory_config.py
core/: crawler.py  crawler_config.py  crawler_stats.py  formatting_utils.py  generation_utils.py  llm_utils.py  project_config.py  ranking.py  response_formatting_utils.py  safety_topic_ranker_matcher.py  tokenization_utils.py  topic_queue.py
exp/: README_BASELINE_ANALYSIS.md  README_MANUAL_CLUSTERING.md  README_PBR_METRIC.md  add_missing_translations.py  add_translations.py  analysis_rdm.md  analyze_baseline_per_model.py  analyze_meta_cluster_coverage.py  benchmark_backends.py  compute_pbr.py  create_pbr_benchmark.py  evaluate_benchmark.py  evaluate_crawler.py  evaluate_refusal_check_queries.py  evaluate_refusal_check_queries_with_prompts.py  evaluate_refusal_rate.py  example_match_crawler_log.py  extract_openrouter_chat.py  load_latest_crawler_log.py  load_meta_cluster_coverage.ipynb  manual_cluster_topics.py  (+11 more)
exp/manual_labeling_offline/: .gitignore  README.md  app.py  pyproject.toml
exp/manual_labeling_offline/data/: crawler_log_20251127_083333_DeepSeek-R1-Distill-Llama-8B_1samples_100crawls_Truefilter_thought_prefill_with_seedprompt_vllm_manual_clusters.json
exp/manual_labeling_offline/templates/: cluster_topics.html
(+145 files in other folders)
